solving overflow issue

--- a/styles/header_test.css
+++ b/styles/header_test.css
@@ -8,6 +8,7 @@
     background-color: rgb(0, 0, 0);
     border-bottom: 1px solid #ccc;
   }
+  
   .nav-container {
     position: relative;
     display: flex;
@@ -173,7 +174,6 @@
   
   /* Language options dropdown */
   .language-options {
-    padding: 6px 0;
     display: none;
     position: absolute;
     right: 0;
@@ -340,6 +340,7 @@
 
       .language-options {
         font-size: 12px;
+        width:40px;
       }
 
      }
